# rocket-resource

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/todo_resources/: Cargo.toml
examples/todo_resources/src/: main.rs  resource.rs
rocket_resources/: Cargo.toml
rocket_resources/src/: lib.rs
