[package]
name = "todo_resources"
version = "0.0.0"

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
r2d2 = "0.7"
diesel = { version = "0.12", features = ["sqlite"] }
diesel_codegen = { version = "0.12", features = ["sqlite"] }
r2d2-diesel = "0.12"
rocket_resources = { path = "../../rocket_resources" }

[dependencies.rocket_contrib]
version = "0.2.4"
default_features = false
features = [ "tera_templates" ]
